force-app/main/default/objects/Material_Purchase_Line_Item__c/Material_Purchase_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Material Order Line Item</label>
    <nameField>
        <displayFormat>MOLI-{000000}</displayFormat>
        <label>Material Order Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>