force-app/main/default/objects/Material_Purchase_Line_Item__c/fields/Material_Item__c.field-meta.xml
<CustomField>
    <fullName>Material_Item__c</fullName>
    <label>Material Item</label>
    <referenceTo>Material_Item__c</referenceTo>
    <relationshipName>Material_Purchase_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>