force-app/main/default/objects/Material_Purchase_Line_Item__c/fields/MPLI_Status__c.field-meta.xml
<CustomField>
    <fullName>MPLI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
                <default>true</default>
                <label>Outstanding</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>